Modules/Vnet/main.tf
resource "azurerm_network_security_group" "nsg1" {
  name = var.nsgname
  location = var.location
  resource_group_name = var.resourcegroupname
}

resource "azurerm_virtual_network" "vnet" {
  name = var.vnetname
  location = var.location
  resource_group_name = var.resourcegroupname
  address_space = ["10.0.0.0/16"]
  dns_servers         = ["10.0.0.4", "10.0.0.5"]

  subnet {
    name           = "subnet1"
    address_prefix = "10.0.1.0/24"
  }

  subnet {
    name           = "subnet2"
    address_prefix = "10.0.2.0/24"
    security_group = azurerm_network_security_group.nsg1.id
  }

  tags = {
    environment = "Production"
  }
}
